[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/KingsGambit_tiles/pawn_minion.png" type="Texture" id=1]
[ext_resource path="res://Pawn_enemy.gd" type="Script" id=2]
[ext_resource path="res://Fireball.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0133
height = 34.3861

[node name="Pawn_enemy" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 2147483649
script = ExtResource( 2 )
Projectile = ExtResource( 3 )
speed = 1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Pawn_enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Pawn_enemy_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
